1、修改项目结构 2、添加可以进行日期段选择的控件

--- a/ESCalendarView/ESCalendarView/Base.lproj/Main.storyboard
+++ b/ESCalendarView/ESCalendarView/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="9TQ-CM-Kle">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,91 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bYf-Dv-20K">
+                                <rect key="frame" x="133.5" y="84" width="108" height="30"/>
+                                <state key="normal" title="高度自定义日历"/>
+                                <connections>
+                                    <segue destination="EhW-gA-fIh" kind="push" id="BBs-JZ-gLJ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="etC-Ac-Ckb">
+                                <rect key="frame" x="118.5" y="154" width="138" height="30"/>
+                                <state key="normal" title="选择时间区间的日期"/>
+                                <connections>
+                                    <segue destination="nrp-SH-HRt" kind="push" id="WOF-SS-QwN"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="etC-Ac-Ckb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Cfp-1u-mXC"/>
+                            <constraint firstItem="bYf-Dv-20K" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GTi-th-YfI"/>
+                            <constraint firstItem="etC-Ac-Ckb" firstAttribute="top" secondItem="bYf-Dv-20K" secondAttribute="bottom" constant="40" id="P8S-n0-etU"/>
+                            <constraint firstItem="bYf-Dv-20K" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="rYn-OE-UVC"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="rzr-X4-nck"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="964" y="31.934032983508249"/>
+        </scene>
+        <!--Multi Select Date Calendar View Controller-->
+        <scene sceneID="KOx-du-EXw">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="nrp-SH-HRt" customClass="ESCMultiSelectDateCalendarViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ON2-dF-42v"/>
+                        <viewControllerLayoutGuide type="bottom" id="ppP-R5-0FE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kEn-B9-Grb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="XTg-jY-gPX"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bms-Wh-6Kv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1782" y="321"/>
+        </scene>
+        <!--Calendar View Controller-->
+        <scene sceneID="GXl-s0-Lyc">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="EhW-gA-fIh" customClass="ESCCalendarViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9rC-GD-WAl"/>
+                        <viewControllerLayoutGuide type="bottom" id="Lkl-Ox-L0s"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ozu-Yc-IFH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="mfj-AL-k7I"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9bn-FI-pIU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1782" y="-360"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="AJZ-cl-ukB">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9TQ-CM-Kle" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KU6-RU-lwb">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Pzx-Vi-MZM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rC9-na-aBH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="116" y="32"/>
         </scene>
     </scenes>
 </document>
